<?xml version="1.0"?>
<package format="2">
  <name>slam_pkg</name>
  <version>0.0.0</version>
  <description>SLAM with auto stop and ArUco memory</description>

  <maintainer email="jetson@todo.todo">jetson</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <depend>tf</depend>
  <depend>nav_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>cv_bridge</depend>
  <depend>image_transport</depend>

</package>
